tests/snapshots/run_wpt_conformance__onnx_resample2d_upsample__float32_4D_tensor_options_sizes.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "resample2d.https.any.js",
    "resample2d(upsample) float32 4D tensor options.sizes",
    "onnx",
    "PASS",
)
